fix: flex wrap

--- a/src/components/modalHome/styles.module.scss
+++ b/src/components/modalHome/styles.module.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
     font-size: 20px;
     height: 50px;
-    width: 300px;
+    width: 250px;
     position: absolute;
     bottom: -40px;
     display: flex;
